[package]
name = "tree-walk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tree-walk"
test = false
bench = false

[dependencies]
anyhow = "1.0.81"
bytesize = "1.3.0"
clap = { version = "4.5.2", features = ["derive"] }
